Fullbleed Teaser link fix

--- a/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
+++ b/source/widgets/full_bleed_teaser/full_bleed_teaser.scss
@@ -186,6 +186,7 @@
 					padding: $basicPush * 2;
 					margin-top: $basicPush * 5;
 					margin-bottom: $basicPush * 5;
+					overflow: hidden;
 				}
 			}
 
